# Minta

./: .gitignore  Cargo.toml  README.md  release.sh
.cargo/: config
src/: bitcoind.rs  gui.rs  main.rs  service.rs
